web-wallet: Fix layout shift (Balance component)
Resolves #1514

--- a/web-wallet/src/style/dusk-components/balance.css
+++ b/web-wallet/src/style/dusk-components/balance.css
@@ -30,6 +30,11 @@
   font-weight: 400;
   line-height: 150%;
   letter-spacing: -0.01em;
+  visibility: hidden;
+}
+
+.dusk-balance__fiat--visible > strong {
+  visibility: unset;
 }
 
 .dusk-icon.dusk-balance__icon {
